Using DOMPurify to guard against extremely unlikely XSS attack from EveMails (its escaped, but just in case)

--- a/index.html
+++ b/index.html
@@ -238,12 +238,16 @@
 			</div>
 		</div>
 	</div>
-	<script defer="" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
+	<script defer="" type="text/javascript" src=" https://cdn.jsdelivr.net/npm/marked/marked.min.js">
 	</script>
-	<script defer="" src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+	<script defer="" type="text/javascript"
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
 		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/quill@2.0.3/dist/quill.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.2.7/purify.min.js"
+		integrity="sha512-78KH17QLT5e55GJqP76vutp1D2iAoy06WcYBXB6iBCsmO6wWzx0Qdg8EDpm8mKXv68BcvHOyeeP4wxAL0twJGQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 	<script defer="" src="/js/SimpleESI.js?v=--hash--"></script>
 	<script defer="" src="/js/esi.js?v=--hash--"></script>
 	<script defer="" src="/js/app.js?v=--hash--"></script>
